Online peers: fix spacing issue

--- a/packages/thicket-webapp/src/App/Community/OnlinePeers/OnlinePeers.css
+++ b/packages/thicket-webapp/src/App/Community/OnlinePeers/OnlinePeers.css
@@ -19,6 +19,7 @@
   align-items: center;
   outline: none;
   cursor: pointer;
+  padding: 0;
 }
 
 .onlinePeers-wrap{
